src/test/deca/context/invalid/Objet/protected_void.des
we can't declare a field with type void